# Bevy_Tetris

./: Cargo.toml  license  power_ideas
src/: board.rs  deck.rs  main.rs  ui.rs
src/blocks/: mod.rs
src/blocks/powers/: lightning.rs  mod.rs
src/ui/: menus.rs
src/ui/menus/: main.rs  options.rs  ui_palette.rs
src/ui/widgets/: anchor_widget.rs  color_widget.rs  mod.rs  slider_widget.rs
